Date	Added

2007/06/10
	* Rev. 10744 Fixed nopvp mapflag entry for mosk_in. [L0ne_W0lf]
2007/06/08
	* Added Moscovia maps into mapflags [Lupus]
2007/06/06
	* Added Moscovia maps in the map index [Lupus]
2007/06/01
	* Rev. 10701 Updated nowarpto map flags for Rachel quest maps. [L0ne_W0lf]
2007/06/01
	* Rev. 10663 Updated map flags for Rachel quest maps. [L0ne_W0lf]
2007/05/23
	* Reverted delay_dependon_agi -> delay_dependon_dex
2007/05/19
	* Enhanced log_athena.conf with global/main chat support [ultramage]
	- also changed the filter bit values, please reconfigure this option
2007/04/27
	* Can't teleport in kh_dun01 [Playtester]
	* You can now teleport in jupe_core [Playtester]
2007/04/24
	* monster_ai&0x400 disables all mob-casted skills having a range of 9
	  (monster.conf) [Skotlex]
2007/04/23
	* Debuff on logout&2 is again set to default, instead of removing food
	  bonuses now it removes Maximize Power, Maximum Overthrust and Steel Body.
2007/04/16
	* Changed the default setting for emergency_call to 11 (usable all the
	  time, but only in Gvg Maps) as described by Tharis (skill.conf). [Skotlex]
2007/04/13
	* Added some Kiel quest mapflags [Playtester]
	* Added debug command @displayskill. Should be used only by people
	  searching for new skill IDs. [Skotlex]
2007/04/12
	* Updated various mapflags with 11.2 maps [Playtester]
2007/04/11
	* The pc_max_status_def and mob_max_status_def configs are now set on a
	  1-100 scale instead of 1-10000 (status.conf)
2007/04/03
	* Added hom_setting&0x40, when set it clears the "can't reuse" skill delay
	  when you vaporize a homunculus (set by default). [Skotlex]
2007/04/02
	* Set the default vending tax to 2% as it is in kRO Sakray [Playtester]
2007/03/28
	* Added config "vending_tax" to apply a tax to all vending requests, as it
	  was in kRO Sakray some time ago (items.conf).
2007/03/22
	* Made packet_ver_flag's description use hexadecimal values for the packet
	  versions, and changed the default to 0xFFFF. [Skotlex]