@@ -31,9 +31,10 @@ casting_rate: 100
 // Delay time after casting (Note 2)
 delay_rate: 100
 
-// Is the delay time is dependent on the caster's DEX? (Note 1)
-// Note: On Official servers Dex does NOT affect delay time
+// Does the delay time depend on the caster's DEX and/or AGI? (Note 1)
+// Note: On Official servers, neither Dex nor Agi affect delay time
 delay_dependon_dex: no
+delay_dependon_agi: no
 
 // Minimum allowed delay for ANY skills after casting (in miliseconds) (Note 1)
 // Note: Setting this to anything above 0 can stop speedhacks.
